manifests/hello.yaml
apiVersion: v1
kind: Service
metadata:
    name: hello
    labels:
        app: hello
spec:
    selector:
        app: hello
    ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hello
    labels:
        app: hello
        version: v1
spec:
    replicas: 1
    selector:
        matchLabels:
            app: hello
            version: v1
    template:
        metadata:
            labels:
                app: hello
                version: v1
        spec:
            serviceAccountName: hello
            containers:
            - name: hello
              image: tomocy/hello:v1
              ports:
              - containerPort: 80
